# src/routes.ts
@@ -22,15 +22,16 @@ const listTagsController = new ListTagsController();
 const listUsersController = new ListUsersController();
 
 router.post("/users", createUserController.handle);
-router.post("/tags", ensureAuthenticated, ensureAdmin, createTagController.handle);
-router.post("/login", authenticateUserController.handle);
-router.post("/compliments", ensureAuthenticated, createComplimentController.handle);
+router.get("/users", ensureAuthenticated, listUsersController.handle);
 
 router.get("/users/compliments/send", ensureAuthenticated, listUserSendComplimentsController.handle);
 router.get("/users/compliments/receive", ensureAuthenticated, listUserReceiveComplimentsController.handle);
 
+router.post("/tags", ensureAuthenticated, ensureAdmin, createTagController.handle);
 router.get("/tags", ensureAuthenticated, listTagsController.handle);
 
-router.get("/users", ensureAuthenticated, listUsersController.handle);
+router.post("/login", authenticateUserController.handle);
+
+router.post("/compliments", ensureAuthenticated, createComplimentController.handle);
 
 export { router };
